deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  labels:
    name: $APP_NAME
    app: $APP_GROUP
spec:
  replicas: 1
  selector:
    matchLabels:
      run: $APP_NAME
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: $APP_NAME
        app: $APP_GROUP
        name: $APP_NAME
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io.scheme: "http"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "$LISTEN_PORT"
    spec:
      nodeSelector:
        agentpool: chatbots
      containers:
      - name: $APP_NAME
        image: $DOCKER_IMAGE:$CI_COMMIT_SHA
        ports:
          - containerPort: $LISTEN_PORT
            name: http
            protocol: TCP
        imagePullPolicy: Always
        resources:
          requests:
            cpu: $CPU_REQUEST
            memory: $MEMORY_REQUEST
          limits:
            cpu: $CPU_LIMIT
            memory: $MEMORY_LIMIT
